<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/color_surface"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".About_Us.AboutUsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextView_black_to_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha=".87"
            android:fontFamily="@font/rubik_bold"
            android:gravity="center"
            android:text="@string/about_us_u"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/cut_corner_four_side"
        android:orientation="vertical"
        android:paddingLeft="7dp"
        android:paddingRight="7dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <TextView
                    style="@style/TextView_black_to_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha=".87"
                    android:fontFamily="@font/rubik_medium"
                    android:gravity="start"
                    android:lines="1"
                    android:text="@string/brief_title"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.BAUET.Headline6" />

                <TextView
                    style="@style/TextView_black_to_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="5dp"
                    android:alpha=".87"
                    android:fontFamily="@font/rubik_regular"
                    android:gravity="start"
                    android:justificationMode="inter_word"
                    android:text="@string/bauet_brief"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.BAUET.Body1" />

                <TextView
                    style="@style/TextView_black_to_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="5dp"
                    android:alpha=".87"
                    android:fontFamily="@font/rubik_regular"
                    android:gravity="start"
                    android:justificationMode="inter_word"
                    android:text="@string/following_faci"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.BAUET.Body1" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/divider" />

                <TextView
                    style="@style/TextView_black_to_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:alpha=".87"
                    android:fontFamily="@font/rubik_medium"
                    android:gravity="start"
                    android:justificationMode="inter_word"
                    android:lines="1"
                    android:text="@string/vision_mision"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.BAUET.Headline6" />

                <TextView
                    style="@style/TextView_black_to_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:alpha=".87"
                    android:fontFamily="@font/rubik_regular"
                    android:gravity="start"
                    android:justificationMode="inter_word"
                    android:text="@string/vision_details"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.BAUET.Body1" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/divider" />

                <TextView
                    style="@style/TextView_black_to_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:alpha=".87"
                    android:fontFamily="@font/rubik_medium"
                    android:gravity="start"
                    android:justificationMode="inter_word"
                    android:lines="1"
                    android:text="@string/core"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.BAUET.Headline6" />

                <TextView
                    style="@style/TextView_black_to_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="5dp"
                    android:alpha=".87"
                    android:fontFamily="@font/rubik_regular"
                    android:gravity="start"
                    android:justificationMode="inter_word"
                    android:text="@string/core_details"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.BAUET.Body1" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/divider" />

                <TextView
                    style="@style/TextView_black_to_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:alpha=".87"
                    android:fontFamily="@font/rubik_medium"
                    android:gravity="start"
                    android:justificationMode="inter_word"
                    android:lines="1"
                    android:text="@string/attribute"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.BAUET.Headline6" />

                <TextView
                    style="@style/TextView_black_to_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="5dp"
                    android:alpha=".87"
                    android:fontFamily="@font/rubik_regular"
                    android:gravity="start"
                    android:justificationMode="inter_word"
                    android:text="@string/attribute_details"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.BAUET.Body1" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/divider" />

                <TextView
                    style="@style/TextView_black_to_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:alpha=".87"
                    android:fontFamily="@font/rubik_medium"
                    android:gravity="start"
                    android:justificationMode="inter_word"
                    android:lines="1"
                    android:text="@string/name_foundr"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.BAUET.Headline6" />

                <TextView
                    style="@style/TextView_black_to_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="5dp"
                    android:alpha=".87"
                    android:fontFamily="@font/rubik_regular"
                    android:gravity="start"
                    android:justificationMode="inter_word"
                    android:text="@string/name_of_founder"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.BAUET.Body1" />

                <TextView
                    style="@style/TextView_black_to_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:alpha=".87"
                    android:fontFamily="@font/rubik_medium"
                    android:gravity="start"
                    android:justificationMode="inter_word"
                    android:lines="1"
                    android:text="@string/appr_autho"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.BAUET.Headline6" />

                <TextView
                    style="@style/TextView_black_to_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="5dp"
                    android:alpha=".87"
                    android:fontFamily="@font/rubik_regular"
                    android:gravity="start"
                    android:justificationMode="inter_word"
                    android:text="@string/approaving_authority"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.BAUET.Body1" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/divider" />

                <TextView
                    style="@style/TextView_black_to_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:alpha=".77"
                    android:fontFamily="@font/rubik_medium"
                    android:gravity="center"
                    android:justificationMode="inter_word"
                    android:lines="1"
                    android:text="@string/bauet_logo"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.BAUET.Headline6"
                    android:textColor="@color/green"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="250dp"
                    android:layout_height="242dp"
                    android:layout_gravity="center"
                    android:src="@drawable/logo" />

                <TextView
                    style="@style/TextView_black_to_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:alpha=".77"
                    android:fontFamily="@font/rubik_medium"
                    android:gravity="center"
                    android:justificationMode="inter_word"
                    android:lines="1"
                    android:text="@string/moto_knowledge_and_technology"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.BAUET.Subtitle1"
                    android:textStyle="bold" />

                <TextView
                    style="@style/TextView_black_to_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:alpha=".77"
                    android:fontFamily="@font/rubik_medium"
                    android:gravity="center"
                    android:justificationMode="inter_word"
                    android:lines="1"
                    android:text="@string/wheel_progress"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.BAUET.Subtitle1"
                    android:textStyle="bold" />

                <TextView
                    style="@style/TextView_black_to_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:alpha=".97"
                    android:fontFamily="@font/rubik_medium"
                    android:gravity="center"
                    android:justificationMode="inter_word"
                    android:text="@string/cross_sword_with_water_lily_symbol_of_bangladesh_army_with_national_flower_it_signifies_army_sponsorship"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.BAUET.Subtitle2" />

                <TextView
                    style="@style/TextView_black_to_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:alpha=".97"
                    android:fontFamily="@font/rubik_medium"
                    android:gravity="center"
                    android:justificationMode="inter_word"
                    android:text="@string/bar_and_wave_main_branches_of_engineering"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.BAUET.Subtitle2" />

                <TextView
                    style="@style/TextView_black_to_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:alpha=".97"
                    android:fontFamily="@font/rubik_medium"
                    android:gravity="center"
                    android:justificationMode="inter_word"
                    android:text="@string/green_background_depicts_greeneries_of_bangladesh"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.BAUET.Subtitle2" />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </LinearLayout>


</LinearLayout>